# DepthAwareStereo

./: README.md
DCNNDemo/: CMakeLists.txt
DCNNDemo/.kdev4/: DCNNDemo.kdev4
DCNNDemo/models-1604/: model_utils.py  runme.py
DCNNDemo/models-1604/dcnnlib/: CMakeLists.txt  dcnnmodule.cpp  dcnnmodule.h
DCNNDemo/models-1604/dcnnlib/pyboostcvconverter/: CMakeLists.txt
DCNNDemo/models-1604/ops/depthavgpooling/: make_cu10.sh
DCNNDemo/models-1604/ops/depthconv/: make_cu10.sh
DCNNDemo/models-1804/: TDeeplab.py  VGG_Deeplab.py  config20190920.ini  module.py  readme  runme.py
DCNNDemo/models-1804/ops/depthavgpooling/: build.py  make_cu10.sh
DCNNDemo/models-1804/ops/depthavgpooling/functions/: depthavgpooling.py
DCNNDemo/models-1804/ops/depthavgpooling/src/: depthavgpooling_cuda.cpp  depthavgpooling_cuda.h
DCNNDemo/models-1804/ops/depthconv/: build.py  make_cu10.sh  make_cu9.sh
DCNNDemo/models-1804/ops/depthconv/functions/: depthconv.py
DCNNDemo/models-1804/ops/depthconv/modules/: depthconv.py
DCNNDemo/models-1804/ops/depthconv/src/: depthconv_cuda.cpp  depthconv_cuda.h
DCNNDemo/models-spec/: TDeeplab.py  VGG_Deeplab.py  module.py  readme  runme.py  runme.sh
DCNNDemo/models-spec/dcnnlib/: CMakeLists.txt
DCNNDemo/models-spec/dcnnlib/.kdev4/: dcnnlib.kdev4
DCNNDemo/src/: demo.cpp
DCNNDemo/src/.kdev4/: DCNNDemo.kdev4
testing/: params.py  road_make.py  test_do.py
testing/data/: custom_dataset_data_loader.py  nyuv2_dataset_crop.py
testing/models/: Deeplab.py  TDeeplab.py  VGG_Deeplab.py
testing/models/ops/depthavgpooling/: build.py  make.sh
testing/models/ops/depthconv/: build.py  make.sh
testing/models/ops/depthconv/src/: depthconv.c  depthconv_cuda.h
training/: params.py  road_make.py  train.py
training/data/: base_dataset.py  custom_dataset_data_loader.py
training/dataset/: class_colors.txt  map.txt  mapr.txt  test_list.txt  train_list.txt
training/models/: Deeplab.py
training/models/ops/depthavgpooling/: make.sh
training/models/ops/depthconv/: make.sh
